deploy.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: roundware-web
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: "startelecert"
    ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  tls:
    - hosts:
        - 'roundware-web.probabble.com'
        - 'www.roundware-web.probabble.com'
      secretName: "roundware-web-cert"
  rules:
    - host: 'roundware-web.probabble.com'
      http:
        paths:
          - path: /
            backend:
              serviceName: roundware-web
              servicePort: 80
    - host: 'www.roundware-web.probabble.com'
      http:
        paths:
          - path: /
            backend:
              serviceName: roundware-web
              servicePort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: roundware-web
  labels:
    app: roundware-web
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: roundware-web

---

apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: roundware-web
spec:
  selector:
    matchLabels:
      app: roundware-web
  replicas: 1
  template:
    metadata:
      labels:
        app: roundware-web
    spec:
      containers:
        - name: roundware-web
          image: registry.gitlab.com/probabble/roundware-web-template:main
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: roundware-web-deploy
